首页添加标签功能

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,7 +21,7 @@
 @import "~startbootstrap-clean-blog/scss/clean-blog";
 
 .jz-body {
-  background-image: url('/storage/uploads/samuel-ferrara-318709-unsplash.jpg');
+  background-image: url('https://jingze.oss-cn-beijing.aliyuncs.com/jzblog/back.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
