--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17109,7 +17109,7 @@ footer .copyright {
 }
 
 .jz-body {
-  background-image: url("/storage/uploads/samuel-ferrara-318709-unsplash.jpg");
+  background-image: url("https://jingze.oss-cn-beijing.aliyuncs.com/jzblog/back.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
