--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17116,6 +17116,15 @@ footer .copyright {
   background-attachment: fixed;
 }
 
+.jz-worklog {
+  height: 500px;
+  opacity: 0.7;
+  background-image: url("https://jingze.oss-cn-beijing.aliyuncs.com/jzblog/workLog.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
 #card {
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
