--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,76 +1,79 @@
-
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-
 // Variables
 @import 'variables';
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
-
 @import "~datatables.net-bs4/css/dataTables.bootstrap4";
-
 // Font Awesome
 @import '~@fortawesome/fontawesome-free/scss/brands';
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
-
 //clean blog
-
 @import "~startbootstrap-clean-blog/scss/clean-blog";
 
 .jz-body {
-  background-image: url('https://jingze.oss-cn-beijing.aliyuncs.com/jzblog/back.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
+    background-image: url('https://jingze.oss-cn-beijing.aliyuncs.com/jzblog/back.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
+.jz-worklog {
+    height: 500px;
+    opacity: 0.7;
+    background-image: url('https://jingze.oss-cn-beijing.aliyuncs.com/jzblog/workLog.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
+
 #card {
-  transition: all .5s;
-  -webkit-transition: all .5s;
-  -ms-transition: all .5s;
-  margin-bottom: 10px;
-  max-height: 280px;
-  overflow: hidden;
+    transition: all .5s;
+    -webkit-transition: all .5s;
+    -ms-transition: all .5s;
+    margin-bottom: 10px;
+    max-height: 280px;
+    overflow: hidden;
 }
 
 #card:hover {
-  -webkit-transform: translateY(-10px);
-  -moz-transform: translateY(-10px);
-  -ms-transform: translateY(-10px);
-  -o-transform: translateY(-10px);
-  transform: translateY(-10px);
-  cursor: pointer;
+    -webkit-transform: translateY(-10px);
+    -moz-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    -o-transform: translateY(-10px);
+    transform: translateY(-10px);
+    cursor: pointer;
 }
 
 .img-card {
-  object-fit: cover;
-  opacity: 0.8;
-  overflow: hidden;
+    object-fit: cover;
+    opacity: 0.8;
+    overflow: hidden;
 }
 
 .jz-img-text {
-  position: relative;
-  letter-spacing: 1.5px;
-  top: 15%;
+    position: relative;
+    letter-spacing: 1.5px;
+    top: 15%;
 }
 
 .jz-img-text span {
-  font-size: 2rem;
+    font-size: 2rem;
 }
 
 .jz-img-text h5 {
-  font-style: italic;
-  font-weight: 300;
+    font-style: italic;
+    font-weight: 300;
 }
 
-.jz-blog-title{
-  font-size:xx-large;
+.jz-blog-title {
+    font-size: xx-large;
 }
-.jz-blog-tag{
-  font-size:1rem;
-  color: #fff !important;
+
+.jz-blog-tag {
+    font-size: 1rem;
+    color: #fff !important;
 }
