--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17125,6 +17125,11 @@ footer .copyright {
   background-position: center center;
 }
 
+.worklog-image {
+  height: 200px;
+  width: 200px;
+}
+
 #card {
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
