--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,11 +22,13 @@
 }
 .jz-worklog {
     height: 500px;
-    opacity: 0.7;
     background-image: url('https://jingze.oss-cn-beijing.aliyuncs.com/jzblog/workLog.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+}
+.jz-nav-back{
+    background: rgb(163,130,155);
 }
 
 #card {
